Fastmail Secrets (no rated)

--- a/Makefile.am
+++ b/Makefile.am
@@ -692,6 +692,7 @@ include_HEADERS = \
 	lib/lsort.h \
 	lib/map.h \
 	lib/mappedfile.h \
+	lib/me.h \
 	lib/mkgmtime.h \
 	lib/mpool.h \
 	lib/nonblock.h \
@@ -1216,6 +1217,7 @@ lib_libcyrus_min_la_SOURCES = \
 	lib/hashu64.c \
 	lib/imapopts.c \
 	lib/libconfig.c \
+	lib/me.c \
 	lib/mpool.c \
 	lib/retry.c \
 	lib/strarray.c \
