hammer_cyrusdb: now with more generic

--- a/Makefile.am
+++ b/Makefile.am
@@ -156,6 +156,7 @@ user_PROGRAMS += \
 	imap/cyr_synclog \
 	imap/cyr_userseen \
 	imap/deliver \
+	imap/hammer_cyrusdb \
 	imap/ipurge \
 	imap/mbexamine \
 	imap/mbpath \
@@ -800,6 +801,9 @@ imap_fetchnews_LDADD = $(LD_UTILITY_ADD)
 
 imap_fud_SOURCES = imap/fud.c imap/mutex_fake.c master/service.c
 imap_fud_LDADD = $(LD_SERVER_ADD)
+
+imap_hammer_cyrusdb_SOURCES = imap/cli_fatal.c imap/hammer_cyrusdb.c imap/mutex_fake.c
+imap_hammer_cyrusdb_LDADD = $(LD_UTILITY_ADD)
 
 imap_idled_SOURCES = imap/idled.c imap/mutex_fake.c
 imap_idled_LDADD = $(LD_UTILITY_ADD)
