Add new message API and test program
v2: renamed, and merged
c80a017 wip2 - new message API
1c58d0d wip3 - new message API
44f69cd Add index_get_message()
c5135d9 Remove message_t.recno
a8a8982 Remove part_query_t
97b0dca Add MESSAGE_APPEND flag
7e6ea0c Add message_get_header()
88599fc Add a bunch of message_get_*() accessors
944fc92 Remove get_body_segment()
84941d7 Message_test has a mode which dumps text sections
ce78667 Use message_t in index_getsearchtext_single() [some hunks]
79ab789 message_need() can actually load M_UID
8373e1a message_foreach_text_section uses MIME type
6d92b78 Improve message_test text section display
fdd9e73 m_f_t_s() works on messages from filenames too
4c6f12c message2: trivial text messages are a corner case
151d097 Disable debug messages from message parsing code
9577460 [IRIS-1912] Fix crash on literals in BODYSTRUCTURE
e95bbc9 Fix compile warning in message.c
5b23985 [IRIS-1912] Handle null multipart BODYSTRUCTURE
678acd9 [IRIS-1912] Handle more multipart corner cases
a64c936 [IRIS-1912] Handle text/plain with no body

--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,7 @@ imap/lmtpstats.h
 imap/mbexamine
 imap/mbpath
 imap/mbtool
+imap/message_test
 imap/mupdate_err.c
 imap/mupdate_err.h
 imap/mupdate
