charset: add HTML tag stripping
- triggered automatically in charset_extract() if subtype is "HTML"
- strips html tags and parameters
- strips html comments (properly - which is surprisingly complex)
- decodes full set of HTML and compatibility character entities
  including numerical entities
- strips contents of <script> and <style> tags
- handles xhtml <tag/> syntax
- based on http://dev.w3.org/html5/spec/tokenization.html

v2:
renamed from "charset: initial implementation of HTML stripping"
merged
d54bec9 charset: fix memleak in striphtml
a7d9646 charset: fix <style> & <script> end tag detection
7db6ce2 charset: handle broken entities properly
4566635 charset: handle XML empty-element <tags/>
d128ff0 Add some unit tests for charset_extract()
f0f2728 charset: html state machine improvements
6f18404 charset: document a number of striphtml issues
2d4afd9 charset: use #define for Unicode replacement char
a8ec861 charset: implement HTML5 character ref mappings
d9fe799 charset: add charset_debug
25c857d charset: check input conditions in each converter
e9cc12b Add more HTML numerical character reference tests
9dfd45a charset: handle all the HTML5 named characters
e2f8f32 charset: strip HTML comments properly
154aa0d charset: improve striphtml debugging
b80f265 Fix indexing of 8bit data
b4443b1 charset: table2uni() can receive REPLACEMENT
7716d98 charset: fix another assert

--- a/Makefile.am
+++ b/Makefile.am
@@ -128,6 +128,8 @@ BUILT_SOURCES += \
 	imap/nntp_err.c \
 	imap/lmtpstats.c \
 	imap/pushstats.c \
+	lib/htmlchar.c \
+	lib/htmlchar.h \
 	imap/rfc822_header.c \
 	imap/rfc822_header.h
 
@@ -355,6 +357,7 @@ EXTRA_DIST += \
 	lib/charset/windows-1252.t \
 	lib/charset/windows-1255.t \
 	lib/charset/windows-1256.t \
+	lib/htmlchar.st \
 	lib/imapoptions \
 	lib/test/cyrusdb.c \
 	lib/test/cyrusdb.INPUT \
@@ -1171,6 +1174,12 @@ imap/rfc822_header.c: imap/rfc822_header.st
 
 imap/rfc822_header.h: imap/rfc822_header.st
 	${top_srcdir}/tools/compile_st.pl -h $< > $@.NEW && mv $@.NEW $@
+
+lib/htmlchar.c: lib/htmlchar.st
+	${top_srcdir}/tools/compile_st.pl -c $< > $@.NEW && mv $@.NEW $@
+
+lib/htmlchar.h: lib/htmlchar.st
+	${top_srcdir}/tools/compile_st.pl -h $< > $@.NEW && mv $@.NEW $@
 endif
 
 imtest_imtest_SOURCES = imtest/imtest.c
@@ -1198,6 +1207,8 @@ lib_libcyrus_la_SOURCES = \
 	lib/cyrusdb_skiplist.c \
 	lib/cyrusdb_twoskip.c \
 	lib/glob.c \
+	lib/htmlchar.c \
+	lib/htmlchar.h \
 	lib/imapurl.c \
 	lib/imclient.c \
 	lib/imparse.c \
@@ -1332,17 +1343,13 @@ dist_man_MANS = \
 	man/reconstruct.8 \
 	man/rmnews.8 \
 	man/smmapd.8 \
-<<<<<<< HEAD
-	man/squatter.8 \
-=======
-	man/syncnews.8 \
->>>>>>> Add --disable-squat to configure
 	man/sync_client.8 \
 	man/sync_reset.8 \
 	man/sync_server.8 \
 	man/timsieved.8 \
 	man/tls_prune.8 \
 	man/unexpunge.8
+
 if USE_SQUAT
 dist_man_MANS += \
 	man/squatter.8
