--- a/Makefile.am
+++ b/Makefile.am
@@ -173,7 +173,7 @@ user_PROGRAMS += imap/cyr_virusscan
 endif # HAVE_CLAMAV
 
 if USE_SQUAT
-service_PROGRAMS += imap/squatter
+service_PROGRAMS += imap/squatter imap/squat_dump
 endif
 
 if NNTPD
@@ -1137,11 +1137,13 @@ imap_smmapd_LDADD = $(LD_SERVER_ADD)
 imap_squatter_SOURCES = imap/cli_fatal.c imap/mutex_fake.c imap/squatter.c imap/squat_build.c
 imap_squatter_LDADD = $(LD_UTILITY_ADD)
 
-imap_sync_client_SOURCES = imap/mutex_fake.c imap/sync_client.c \
-	imap/sync_support.c imap/sync_support.h
+imap_squat_dump_SOURCES = imap/cli_fatal.c imap/mutex_fake.c imap/squat_dump.c
+imap_squat_dump_LDADD = $(LD_UTILITY_ADD)
+
+imap_sync_client_SOURCES = imap/mutex_fake.c imap/sync_client.c imap/sync_support.c imap/sync_support.h
 imap_sync_client_LDADD = $(LD_UTILITY_ADD)
 
-imap_sync_reset_SOURCES = imap/mutex_fake.c imap/sync_reset.c imap/sync_support.c
+imap_sync_reset_SOURCES = imap/mutex_fake.c imap/sync_reset.c imap/sync_support.c imap/sync_support.h
 imap_sync_reset_LDADD = $(LD_UTILITY_ADD)
 
 imap_sync_server_SOURCES = imap/mutex_fake.c imap/sync_server.c imap/sync_support.c master/service.c
