search: move the SQUAT indexing code into libimap
- specifically, search_squat.c (so that in the future programs which
  aren't squatter will be able to run the index update code).

- extend the search_engine and search_text_receiver_t interfaces
  to provide an abstract API for indexing multiple messages

- rewrite squatter to use that absract API instead of doing all
  it's SQUAT calls directly (so that in the future squatter will
  be able to update a Sphinx index)

v2: merged
e79fe64 Avoid failure to install squatter binary

--- a/configure.ac
+++ b/configure.ac
@@ -406,6 +406,9 @@ if test "$enable_sphinx" = yes -a "$with_mysql" = no ; then
     enable_sphinx=no
 fi
 
+AM_CONDITIONAL([SQUATTER],
+    [test "${enable_squat}" != "no" -o "${enable_sphinx}" != "no" ])
+
 AC_ARG_ENABLE(sieve,
         [AS_HELP_STRING([--disable-sieve], [disable Sieve support])],,[enable_sieve="yes";])
 AC_ARG_ENABLE(pcre,
