--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 *.gcno
 *.gcda
 .deps
+.libs
 .dirstamp
 .libs
 Makefile.in
@@ -52,6 +53,7 @@ imap/cyr_df
 imap/cyr_expire
 imap/cyr_info
 imap/cyr_sequence
+imap/cyr_sphinxmgr
 imap/cyr_synclog
 imap/cyr_userseen
 imap/cyrdump
