sphinx: add a unit test for query building
the new get_internalised() method lets us peek into the guts of the
Sphinx extended mode query that is generated by the builder, so we can
actually test it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -623,6 +623,7 @@ cunit_TESTS += cunit/sieve.testc
 endif
 
 cunit_TESTS += \
+	cunit/sphinx.testc \
 	cunit/spool.testc \
 	cunit/squat.testc \
 	cunit/strarray.testc \
