Add command_popen() and friends.
This makes the whole fork-and-pipe-and-exec dance a little bit simpler.

v2: merged in
fbec395 Actually add the command unit tests

--- a/Makefile.am
+++ b/Makefile.am
@@ -598,6 +598,7 @@ cunit_TESTS = \
 	cunit/buf.testc \
 	cunit/byteorder64.testc \
 	cunit/charset.testc \
+	cunit/command.testc \
 	cunit/crc32.testc \
 	cunit/db.testc \
 	cunit/dlist.testc \
