Rip out sphinxmgr, use a single searchd
This reverts almost all the work done on sphinxmgr, removes the
sphinxmgr executable, and all the sphinx-related code paths which go
through sphinxmgr.  The code now assumes that there is a single searchd
running per Cyrus instance, with one index configured per user.

This design has the following advantages:

 * We can use the existing on-disk data without re-indexing, which
   will help us deploy faster.

 * We get a single searchd per slot and no complex state machine
   for starting and stopping searchds, and far less exposure to
   start-time performace issues and bugs in searchd.

 * Each user is their own index in their own directory, and so
   can be moved between servers using a simple rsync.

 * We get some measure of inter-user isolation for safety; if
   one index is corrupted we only have to re-index a single user.

 * The per-index lock inside searchd doesn't become a scaling
   limitation, as it would if we used a single index (although
   we could also have sharded to achieve this).

 * We now avoid the problem where the socket name for the per-user
   searchd could exceed the 100 byte limit of a sockaddr_un for only
   moderately long usernames.  There is only a single socket per
   slot, {configdirectory}/socket/sphinx.

It does mean however that we need to dynamically add indexes to a
running searchd - fortunately it supports that by allowing us to rewrite
its config file and send it SIGHUP.  Indexing is now entirely done
through SphinxQL, just like before the fmindex detour.  We do need one
small bugfix in searchd (patch sphinx-handle-new-rt-index-on-sighup) but
all that hacky fmindex work can go away now.

Adding a new RT index at runtime pauses all incoming connections until
the new index is loaded.  Existing connections proceed but cannot use
the new index.  We need some stress testing to work out if this is a
problem.

--- a/Makefile.am
+++ b/Makefile.am
@@ -156,7 +156,6 @@ user_PROGRAMS += \
 	imap/cyr_expire \
 	imap/cyr_info \
 	imap/cyr_sequence \
-	imap/cyr_sphinxmgr \
 	imap/cyr_synclog \
 	imap/cyr_userseen \
 	imap/deliver \
@@ -781,9 +780,6 @@ imap_cyr_info_LDADD = $(LD_UTILITY_ADD)
 imap_cyr_sequence_SOURCES = imap/cli_fatal.c imap/cyr_sequence.c imap/mutex_fake.c
 imap_cyr_sequence_LDADD = $(LD_UTILITY_ADD)
 
-imap_cyr_sphinxmgr_SOURCES = imap/cyr_sphinxmgr.c imap/mutex_fake.c
-imap_cyr_sphinxmgr_LDADD = $(LD_UTILITY_ADD)
-
 imap_cyr_synclog_SOURCES = imap/cli_fatal.c imap/cyr_synclog.c imap/mutex_fake.c
 imap_cyr_synclog_LDADD = $(LD_UTILITY_ADD)
 
@@ -960,9 +956,7 @@ endif
 
 if USE_SPHINX
 imap_libcyrus_imap_la_SOURCES += \
-	imap/search_sphinx.c \
-	imap/sphinxmgr_client.h \
-	imap/sphinxmgr_client.c
+	imap/search_sphinx.c
 endif
 
 imap_libcyrus_imap_la_LIBADD = $(COM_ERR_LIBS) $(LIB_UUID) lib/libcyrus_min.la lib/libcyrus.la
