Centralise test code for controlling timezones
So that it can be used in suites other than 'times'.

--- a/Makefile.am
+++ b/Makefile.am
@@ -587,7 +587,9 @@ cunit_FRAMEWORK = \
 	cunit/syslog.c \
 	cunit/cunit-syslog.h \
 	cunit/timeout.c \
-	cunit/timeout.h
+	cunit/timeout.h \
+	cunit/timezones.c \
+	cunit/timezones.h
 
 cunit_TESTS = \
 	cunit/annotate.testc \
