search: unit tests for search program parsing
which are now possible thanks to moving the parsing code to the library.
Covers all the features of the search program except

 * RETURN
 * CHARSET
 * errors

--- a/Makefile.am
+++ b/Makefile.am
@@ -620,7 +620,8 @@ cunit_TESTS = \
 	cunit/prot.testc \
 	cunit/ptrarray.testc \
 	cunit/quota.testc \
-	cunit/rfc822tok.testc
+	cunit/rfc822tok.testc \
+	cunit/search_expr.testc
 
 if SIEVE
 cunit_TESTS += cunit/sieve.testc
