--- a/Makefile.am
+++ b/Makefile.am
@@ -167,6 +167,7 @@ user_PROGRAMS += \
 	imap/message_test \
 	imap/quota \
 	imap/reconstruct \
+	imap/search_test
 
 if HAVE_CLAMAV
 user_PROGRAMS += imap/cyr_virusscan
@@ -1160,6 +1161,9 @@ imap_reconstruct_LDADD = $(LD_UTILITY_ADD)
 
 imap_dav_reconstruct_SOURCES = imap/cli_fatal.c imap/mutex_fake.c imap/dav_reconstruct.c
 imap_dav_reconstruct_LDADD = $(LD_UTILITY_ADD)
+
+imap_search_test_SOURCES = imap/search_test.c imap/mutex_fake.c
+imap_search_test_LDADD = $(LD_UTILITY_ADD)
 
 imap_smmapd_SOURCES = imap/mutex_fake.c imap/proxy.c imap/smmapd.c master/service.c
 imap_smmapd_LDADD = $(LD_SERVER_ADD)
