Add unit test for seqset
not complete yet, but at least it's a start.

--- a/Makefile.am
+++ b/Makefile.am
@@ -622,7 +622,8 @@ cunit_TESTS = \
 	cunit/ptrarray.testc \
 	cunit/quota.testc \
 	cunit/rfc822tok.testc \
-	cunit/search_expr.testc
+	cunit/search_expr.testc \
+	cunit/seqset.testc
 
 if SIEVE
 cunit_TESTS += cunit/sieve.testc
