[sieve] move verify_flaglist() to flags.c for reuse elsewhere
Once we add the variables extension, we won't be able to check for
flag validity in the parser (sieve.y).  This allows us to use
verify_flaglist() wherever else we need it.

--- a/sieve/Makefile.in
+++ b/sieve/Makefile.in
@@ -91,7 +91,7 @@ test: $(DEPLIBS) libsieve.a test.o ../imap/message.o
 OBJS = sieve_err.o \
        sieve.o sieve-lex.o comparator.o interp.o message.o \
        bc_generate.o bc_dump.o bc_emit.o bc_eval.o \
-       script.o tree.o addr.o addr-lex.o varlist.o
+       script.o tree.o addr.o addr-lex.o flags.o varlist.o
 
 sieve-lex.c: sieve-lex.l sieve.h
 
