http_caldav.c: update VPOLL code to use new VVOTER component

--- a/configure.in
+++ b/configure.in
@@ -1054,7 +1054,7 @@ if test "$ENABLE_RSS" != no -o "$ENABLE_DAV" != no; then
       		AC_DEFINE(HAVE_VAVAILABILITY,[],
 			[Build VAVAILABILITY support into httpd?]))
 
-      AC_EGREP_HEADER(ICAL_VPOLL_COMPONENT, ical.h,
+      AC_EGREP_HEADER(ICAL_VVOTER_COMPONENT, ical.h,
       		AC_DEFINE(HAVE_VPOLL,[],
 			[Build VPOLL support into httpd?]))
 
