http_caldav.c: update VPOLL code to use new VVOTER component

--- a/configure.ac
+++ b/configure.ac
@@ -1211,7 +1211,7 @@ dnl
 		AC_DEFINE(HAVE_VAVAILABILITY,[],
 			[Build VAVAILABILITY support into httpd?]))
 
-	AC_EGREP_HEADER(ICAL_VPOLL_COMPONENT, ical.h,
+	AC_EGREP_HEADER(ICAL_VVOTER_COMPONENT, ical.h,
 		AC_DEFINE(HAVE_VPOLL,[],
 			[Build VPOLL support into httpd?]))
 
