handle $prefix sanely when deriving $cyrus_prefix from it
Summary: handle $prefix sanely when deriving $cyrus_prefix from it

Test Plan:
1. Run ./configure without setting any of --prefix, --with-cyrus-prefix, or --with-service-path

$ grep '\(user\|service\)dir' config.log
servicedir='/usr/local/cyrus/bin'
userdir='/usr/local/cyrus/bin'

servicedir and userdir should be identical, and sensible

$ grep '\(SERVICE_DIR\|CYRUS_PATH\)' config.h
#define CYRUS_PATH "/usr/local/cyrus"
#define SERVICE_DIR "/usr/local/cyrus/bin"

SERVICE_DIR should be CYRUS_PATH + "/bin"; both should be sensible

2. Run ./configure, setting --prefix to something

Check as above, expect /usr/local in paths to be replaced with the prefix
you specified

3. Run ./configure, don't set --prefix, do set --with-cyrus-prefix

Check as above, expect /usr/local in paths to be replaced with the prefix
you specified

4. Run ./configure, don't set --prefix or --with-cyrus-prefix, do set --with-service-path

Check as above, expect "/usr/local/cyrus" in CYRUS_PATH, the others to be set as
per your --with-service-path value

Reviewers: #imap_reviewers, vanmeeuwen

Reviewed By: #imap_reviewers, vanmeeuwen

Subscribers: vanmeeuwen

Maniphest Tasks: T26

Differential Revision: https://git.cyrus.foundation/D7

--- a/configure.ac
+++ b/configure.ac
@@ -74,9 +74,18 @@ AC_SUBST(COV_LDFLAGS)
 AC_ARG_WITH(login,,AC_MSG_ERROR([--with-login is no longer supported.
 Configure SASL appropriately instead.]))
 
+dnl We need to derive default values for --with-cyrus-prefix and
+dnl --with-service-path based on $prefix, but $prefix may currently
+dnl be set to "NONE" for autoconf reasons, so work around that.
+if test "x$prefix" = "xNONE"; then
+    myprefix="$ac_default_prefix"
+else
+    myprefix="$prefix"
+fi
+
 AC_ARG_WITH(cyrus-prefix,
 	[AS_HELP_STRING([--with-cyrus-prefix=DIR], [use DIR as cyrus server install directory [PREFIX/cyrus]])],
-	cyrus_prefix="$withval",cyrus_prefix="$prefix/cyrus")
+	cyrus_prefix="$withval",cyrus_prefix="$myprefix/cyrus")
 AC_DEFINE_UNQUOTED(CYRUS_PATH,"$cyrus_prefix",[Where will we be installed?])
 AC_ARG_WITH(service-path,
 	[AS_HELP_STRING([--with-service-path=DIR], [use DIR as service install directory [CYRUSPREFIX/bin]])],
