Add lib/imapoptions to EXTRA_DIST

--- a/Makefile.am
+++ b/Makefile.am
@@ -284,6 +284,7 @@ EXTRA_DIST = \
 	lib/charset/windows-1252.t \
 	lib/charset/windows-1255.t \
 	lib/charset/windows-1256.t \
+	lib/imapoptions \
 	lib/test/cyrusdb.c \
 	lib/test/cyrusdb.INPUT \
 	lib/test/cyrusdblong.INPUT \
